--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,9 @@
   <groupId>rujianbin.spring-xml</groupId>
   <artifactId>rujianbin-spring-xml-demo</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
 
   <name>rujianbin-spring-xml-demo</name>
-  <url>http://maven.apache.org</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
