--- a/rujianbin-common-web/pom.xml
+++ b/rujianbin-common-web/pom.xml
@@ -51,7 +51,11 @@
         </dependency>
 
 
-
+        <!-- spring data -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-Redis</artifactId>
+        </dependency>
 
 
         <!-- Log framework -->
@@ -127,6 +131,20 @@
         </dependency>
         <!-- springframework end -->
 
+
+        <!-- springframework.security -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+        </dependency>
 
 
 
@@ -214,7 +232,11 @@
             <groupId>com.google.code.kaptcha</groupId>
             <artifactId>kaptcha</artifactId>
         </dependency>
-
+        <!-- utils pagehelper-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+        </dependency>
 
         <!-- db mysql -->
         <dependency>
@@ -224,6 +246,18 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>c3p0</groupId>
+            <artifactId>c3p0</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
         </dependency>
 
     </dependencies>
