--- a/rujianbin-common-web/src/main/webapp/WEB-INF/web.xml
+++ b/rujianbin-common-web/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
-            classpath*:/applicationContext.xml
+            classpath*:/applicationContext.xml,classpath*:/application-security.xml
         </param-value>
     </context-param>
 
@@ -32,6 +32,16 @@
     <url-pattern>*</url-pattern>
     </filter-mapping>
 
+    <!-- spring-security的配置是由HttpSecurityBeanDefinitionParser解析器解析，每一个http都会被解析成一个SecurityFilterChain都添加到FilterChainProxy中的filterChains中。而且该FilterChainProxy会以springSecurityFilterChain注册到spring的bean中  -->
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
 
     <servlet>
         <servlet-name>springmvc</servlet-name>
@@ -46,6 +56,8 @@
         <servlet-name>springmvc</servlet-name>
         <url-pattern>/*</url-pattern>
     </servlet-mapping>
+
+
 
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
