--- a/rujianbin-common-web/src/main/resources/config/commons.properties
+++ b/rujianbin-common-web/src/main/resources/config/commons.properties
@@ -1,5 +1,5 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.91.228:3322/mytest?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&autoReconnect=true&ssl=true
+jdbc.url=jdbc:mysql://192.168.91.228:3322/mytest?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true&autoReconnect=true&useSSL=false
 jdbc.username=root
 jdbc.password=123456
 jdbc.connection_pools.initial_pool_size=50
