--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <!-- springframework -->
     <spring.version>4.3.6.RELEASE</spring.version>
     <spring-security.version>4.2.2.RELEASE</spring-security.version>
+    <spring-security-oauth2.version>2.1.0.RELEASE</spring-security-oauth2.version>
 
     <!-- spring data -->
     <spring-data-commons.version>1.12.5.RELEASE</spring-data-commons.version>
@@ -275,6 +276,33 @@
         <groupId>org.springframework.security</groupId>
         <artifactId>spring-security-web</artifactId>
         <version>${spring-security.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-taglibs</artifactId>
+        <version>${spring-security.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-acl</artifactId>
+        <version>${spring-security.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-crypto</artifactId>
+        <version>${spring-security.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-config</artifactId>
+        <version>${spring-security.version}</version>
+      </dependency>
+
+      <!-- spring-security oauth2-->
+      <dependency>
+        <groupId>org.springframework.security.oauth</groupId>
+        <artifactId>spring-security-oauth2</artifactId>
+        <version>${spring-security-oauth2.version}</version>
       </dependency>
 
 
