--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
     <!-- utils -->
     <poi.version>3.16</poi.version>
     <httpclient.version>4.2.3</httpclient.version>
+    <httpcore.version>4.3.2</httpcore.version>
     <jackson.version>2.8.1</jackson.version>
     <dom4j.version>1.6.1</dom4j.version>
     <google.guava.version>18.0</google.guava.version>
@@ -71,6 +72,15 @@
     <mybatis.version>3.4.1</mybatis.version>
     <mybatis-spring.version>1.3.0</mybatis-spring.version>
     <mongo-java-driver.version>3.4.0</mongo-java-driver.version>
+
+
+    <!-- javax -->
+    <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
+
+    <!-- junit test -->
+    <junit-dep.version>4.11</junit-dep.version>
+    <hamcrest-all.version>1.3</hamcrest-all.version>
+    <junit.version>4.12</junit.version>
 
   </properties>
 
@@ -401,6 +411,11 @@
         <artifactId>httpclient</artifactId>
         <version>${httpclient.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.httpcomponents</groupId>
+        <artifactId>httpcore</artifactId>
+        <version>${httpcore.version}</version>
+      </dependency>
       <!-- utils dom4j -->
       <dependency>
         <groupId>dom4j</groupId>
@@ -501,6 +516,38 @@
         <artifactId>mongo-java-driver</artifactId>
         <version>${mongo-java-driver.version}</version>
       </dependency>
+
+      <!-- javax -->
+      <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>${javax.servlet-api.version}</version>
+      </dependency>
+
+
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit-dep</artifactId>
+        <version>${junit-dep.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-all</artifactId>
+        <version>${hamcrest-all.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>${junit.version}</version>
+      </dependency>
+
+
 
 
     </dependencies>
