--- a/rujianbin-common-web/pom.xml
+++ b/rujianbin-common-web/pom.xml
@@ -261,6 +261,11 @@
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper</artifactId>
         </dependency>
+        <!-- utils bcprov-->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+        </dependency>
 
         <!-- db mysql -->
         <dependency>
